--- a/feature.env
+++ b/feature.env
@@ -1,3 +1,3 @@
 REDIS_ENABLED=false
-NOMIS_AUTH_URL=http://host.docker.internal:9091/auth
+NOMIS_AUTH_URL=http://hmpps-auth:8080/auth
 NOMIS_AUTH_URL_REDIRECT=http://localhost:9091/auth
