--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,6 +225,10 @@ workflows:
           main: true
           requires:
             - set_app_version
+      - hmpps/trivy_latest_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - hmpps-common-vars
       - deploy_dev:
           context:
             - hmpps-common-vars
