--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - "9092:8080"
 
   redis:
-    image: 'bitnami/redis:7.2.4'
+    image: 'bitnamilegacy/redis:7.2.4'
     networks:
       - hmpps
     container_name: prepare-a-case-redis
