--- a/package.json
+++ b/package.json
@@ -90,14 +90,14 @@
     "superagent": "7.1.3"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "15.0.1",
+    "@pact-foundation/pact": "^16.0.2",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
     "axe-core": "^4.10.3",
     "cypress": "^14.4.1",
     "jest": "^29.7.0",
     "jest-junit": "13.2.0",
-    "jest-pact": "^0.11.0",
+    "jest-pact": "^0.13.0",
     "jquery": "^3.7.1",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
