HAAR-3945: 🔧 Move hmpps-auth to ghcr

--- a/compose/user-auth.yml
+++ b/compose/user-auth.yml
@@ -5,7 +5,7 @@ networks:
 services:
 
   hmpps-auth:
-    image: quay.io/hmpps/hmpps-auth:latest
+    image: ghcr.io/ministryofjustice/hmpps-auth:latest
     container_name: hmpps-auth
     networks:
       - hmpps
